--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 <section class="product-gannery-section">  <!-- PRODUCT DETAILS SECTION -->
 	<div class="container">
     	<div class="row">
-        	<div class="col-md-6" data-aos="fade-down" data-aos-duration="1500">
+        	<div class="col-md-6 product-show-xs" data-aos="fade-down" data-aos-duration="1500">
             	<div class="product-gallery-sec">
-                  <div class="swiper-container gallery-top">
+                  <div class="swiper-container gallery-top hide-xs">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide easyzoom easyzoom--overlay">
                         <a href="images/image-01.jpg">
@@ -115,7 +115,7 @@
                     <div class="swiper-button-next swiper-button-white"></div>
                     <div class="swiper-button-prev swiper-button-white"></div>
                   </div>
-                  <div class="swiper-container gallery-thumbs">
+                  <div class="swiper-container gallery-thumbs" style="overflow:hidden">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide thumbs">
                         <img src="images/image-01.jpg" alt="Treva product image">
